Final Project Changes

--- a/index.html
+++ b/index.html
@@ -7,54 +7,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/nav.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Home</title>
     <h1>Golden Loves Ranch</h1>
-    <h2>Breeds: German Shepherd Dog, Golden Retriever
-            </h2>
+    <h2>Breeds: German Shepherd , Golden Retriever
+    </h2>
 </head>
 
 <body>
     <section>
         <div class="navagation">
             <ul>
-                <li><a href="index.html" class="Home">Home</a></li>
-                <li> <a href="about.html" class="About">About Me</a></li>
-                <li> <a href="contact.html" classs="Contact">Contact</a></li>
-                <li><a href="breeding.html" class="Breeding">Breeding<a></li>
-                <li><a href="training.html"class="Training">Training<a></li>
+                <li><a href="index.html" class="home">Home</a></li>
+                <li><a href="about.html" class="about">About Me</a></li>
+                <li><a href="contact.html" class="contact">Contact</a></li>
+                <li><a href="breeding.html" class="breeding">Breeding<a></li>
+                <li><a href="training.html" class="training">Training<a></li>
             </ul>
-            </div>
-        </section>
-        
-    <section>
-        <br>
-        <div>
-            <img src="img/goldparents2.jpg" width=200px height="200px"alt="">
         </div>
-        <div>
-            <img src="img/goldparents3.jpg" width=200px height="200px"alt="">
-        </div>
-        <div><img src=" /img/goldlitter.JPG"width=200px height="200px" alt=""> </div>
-        <div>
-        <img src=" /img/goldparents1.jpg" width="250px" height="200px" alt="">
-        </div>
-        <div>
-            <img src="/img/goldpuppy3.jpg" width="250px" height="200px"alt="">
-        </div>
-    </Section>
-    <section>
+    </section>
+    <section class="gsdiv">
         <div><img src="img/gsdad.JPEG" width="200px" height="200px" alt=""></div>
         <div><img src="/img/gspuppy1.jpg" width="200px" height="200px" alt=""></div>
         <div><img src="/img/gspuppys2.jpg" width="200px" height="200px" alt=""></div>
         <div><img src="/img/gspuppy3.jpg" width="200px" height="200px" alt=""></div>
         <div><img src="/img/gs2.jpg" width="200px" height="200px" alt=""></div>
     </section>
+    <section class="grdiv">
+        <br>
+        <div>
+            <img src="img/goldparents2.jpg" width=200px height="200px" alt="">
+        </div>
+        <div>
+            <img src="img/goldparents3.jpg" width=200px height="200px" alt="">
+        </div>
+        <div><img src=" /img/goldlitter.JPG" width=200px height="200px" alt=""> </div>
+        <div>
+            <img src=" /img/goldparents1.jpg" width="250px" height="200px" alt="">
+        </div>
+        <div>
+            <img src="/img/goldpuppy3.jpg" width="250px" height="200px" alt="">
+        </div>
+    </section>
+
 </body>
-<footer>
-    <p><img src="/img/GoldenLovesRanch-logos_transparent.png" width=100px height=70px alt="
-        Golden Loves Ranch">
-    </p>
+<footer >
+    <div class="facediv"><a href="https://www.facebook.com/profile.php?id=100081909475485&sk=about" class="fa fa-facebook"></a>
+    </div>
+</section>
+  
 </footer>
 
 </html>
-
