--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                     <ul>
                     <li> German Shepherd Dog, Golden Retriever</li>
                     <li>Kennel Name: Golden Loves Ranch</li>
-                    <li>>Breeder Name: Juniper or Hector Colon</li>
+                    <li>Breeder Name: Juniper or Hector Colon</li>
                     <li>Location: Vallejo, CA 94591</li>
                     <li>Phone: 707-654-7060 - 707-655-1491</li>
                 </ul>
