updated breeding page

--- a/breeding.html
+++ b/breeding.html
@@ -11,8 +11,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Breeding</title>
+    <title>Home</title>
     <h1>Golden Loves Ranch</h1>
+    <h2>Breeds: German Shepherd , Golden Retriever
+    </h2>
 </head>
 
 <body>
@@ -20,15 +22,22 @@
         <div class="navagation">
             <ul>
                 <li><a href="index.html" class="home">Home</a></li>
-                <li> <a href="about.html" class="about">About Me</a></li>
-                <li> <a href="contact.html" class="contact">Contact</a></li>
+                <li><a href="about.html" class="about">About Me</a></li>
+                <li><a href="contact.html" class="contact">Contact</a></li>
                 <li><a href="breeding.html" class="breeding">Breeding<a></li>
                 <li><a href="training.html" class="training">Training<a></li>
             </ul>
         </div>
     </section>
-    <section>
-
+    <section class="gsdiv">
+        <div><img src="img/gsdad.JPEG" width="200px" height="200px" alt=""></div>
+        <div><img src="/img/gspuppy1.jpg" width="200px" height="200px" alt=""></div>
+        <div><img src="/img/gspuppys2.jpg" width="200px" height="200px" alt=""></div>
+        <div><img src="/img/gspuppy3.jpg" width="200px" height="200px" alt=""></div>
+        <div><img src="/img/gs2.jpg" width="200px" height="200px" alt=""></div>
+    </section>
+    <section class="grdiv">
+        <br>
         <div>
             <img src="img/goldparents2.jpg" width=200px height="200px" alt="">
         </div>
@@ -42,29 +51,14 @@
         <div>
             <img src="/img/goldpuppy3.jpg" width="250px" height="200px" alt="">
         </div>
-    </Section>
-    <section>
-        <div><img src="img/gsdad.JPEG" width="200px" height="200px" alt=""></div>
-        <div><img src="/img/gspuppy1.jpg" width="200px" height="200px" alt=""></div>
-        <div><img src="/img/gspuppys2.jpg" width="200px" height="200px" alt=""></div>
     </section>
-    <section>
-        <div>
-            <ul>
-                <li>German shepard</li>
-                <li>Golden Retriever</li>
-            </ul>
-        </div>
-    </section>
-    <footer class="footdiv">
-        <footer >
-            <section>  
-             <div class="facediv"><a href="https://www.facebook.com/profile.php?id=100081909475485&sk=about" class="fa fa-facebook"></a>
-             </div>
-         </section>
-         
-    </footer>
 
 </body>
+<footer >
+    <div class="facediv"><a href="https://www.facebook.com/profile.php?id=100081909475485&sk=about" class="fa fa-facebook"></a>
+    </div>
+</section>
+  
+</footer>
 
 </html>
