--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/nav.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Contact</title>
     <h1>Golden Loves Ranch</h1>
 </head>
@@ -48,7 +52,7 @@
 
             <div class="centered">
                 <div class="form">
-                    <h1>Please Contact Us</h1>
+                    <h1 class="headerform">Please Contact Us</h1>
                     <form action="https://formspree.io/f/xjvzgnde" method="POST" class="forms">
                         <label>Your email:<input type="email" name="email"></label><br><br>
                         <label>Your message:<textarea name="message"></textarea></label><br>
@@ -64,16 +68,9 @@
                             <label for="option3">Breeding</label><br>
                         </div>
                         <!-- - radio buttion  -->
-                        <h3>What is your favorite dish</h3>
+                        <h3>Click To Send</h3>
                         <div class=""></div>
-                        <input type="radio" id="optiona" name=food value="Burrito">
-                        <label for="optiona"> Burrito</label><br>
-                        <input type="radio" id="optionb" name=food value="Chow Mein">
-                        <label for="optionb">Chow Mein</label><br>
-                        <input type="radio" id="optionc" name=food value="Pizza">
-                        <label for="optionc">Pizza</label><br>
-                        <input type="radio" id="optiond" name=food value="other">
-                        <label for="optiond">Other</label><br>
+                        
                         <button type="submit" class="button">Send</button>
                     </form>
                 </div>
