Fixed form Spacing

--- a/breeding.html
+++ b/breeding.html
@@ -54,11 +54,12 @@
     </section>
 
 </body>
-<footer >
-    <div class="facediv"><a href="https://www.facebook.com/profile.php?id=100081909475485&sk=about" class="fa fa-facebook"></a>
+<footer>
+    <div class="facediv"><a href="https://www.facebook.com/profile.php?id=100081909475485&sk=about"
+            class="fa fa-facebook"></a>
     </div>
-</section>
-  
+    </section>
+
 </footer>
 
 </html>
