--- a/about.html
+++ b/about.html
@@ -45,13 +45,14 @@
     </div>
     </section>
     <footer class="footdiv">
-        <footer >
-            <section>  
-             <div class="facediv"><a href="https://www.facebook.com/profile.php?id=100081909475485&sk=about" class="fa fa-facebook"></a>
-             </div>
-         </section>
-         
-    </footer>
+        <footer>
+            <section>
+                <div class="facediv"><a href="https://www.facebook.com/profile.php?id=100081909475485&sk=about"
+                        class="fa fa-facebook"></a>
+                </div>
+            </section>
+
+        </footer>
 
 </body>
 
