--- a/breeding.html
+++ b/breeding.html
@@ -30,26 +30,26 @@
         </div>
     </section>
     <section class="gsdiv">
-        <div><img src="img/gsdad.JPEG" width="200px" height="200px" alt=""></div>
-        <div><img src="/img/gspuppy1.jpg" width="200px" height="200px" alt=""></div>
-        <div><img src="/img/gspuppys2.jpg" width="200px" height="200px" alt=""></div>
-        <div><img src="/img/gspuppy3.jpg" width="200px" height="200px" alt=""></div>
-        <div><img src="/img/gs2.jpg" width="200px" height="200px" alt=""></div>
+        <div><img src="img/gsdad.JPEG" width="200px" height="200px" alt="The Parent"></div>
+        <div><img src="/img/gspuppy1.jpg" width="200px" height="200px" alt="German Shepherd Puppy"></div>
+        <div><img src="/img/gspuppys2.jpg" width="200px" height="200px" alt="German Shepherd Puppy"></div>
+        <div><img src="/img/gspuppy3.jpg" width="200px" height="200px" alt="German Shepherd Puppy"></div>
+        <div><img src="/img/gs2.jpg" width="200px" height="200px" alt="German Shepherd Puppy"></div>
     </section>
     <section class="grdiv">
         <br>
         <div>
-            <img src="img/goldparents2.jpg" width=200px height="200px" alt="">
+            <img src="img/goldparents2.jpg" width=200px height="200px" alt="The Parents">
         </div>
         <div>
-            <img src="img/goldparents3.jpg" width=200px height="200px" alt="">
+            <img src="img/goldparents3.jpg" width=200px height="200px" alt="The Parents ">
         </div>
-        <div><img src=" /img/goldlitter.JPG" width=200px height="200px" alt=""> </div>
+        <div><img src=" /img/goldlitter.JPG" width=200px height="200px" alt="Golden Labrador Puppies"> </div>
         <div>
-            <img src=" /img/goldparents1.jpg" width="250px" height="200px" alt="">
+            <img src=" /img/goldparents1.jpg" width="250px" height="200px" alt="The Parents">
         </div>
         <div>
-            <img src="/img/goldpuppy3.jpg" width="250px" height="200px" alt="">
+            <img src="/img/goldpuppy3.jpg" width="250px" height="200px" alt="Golden Labrador Puppies">
         </div>
     </section>
 
