Removed / from image file and css links

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
             </ul>
         </div>
     </section>
-    <div><img src="/img/glr9.jpg" alt="" width="400px">
+    <div><img src="img/glr9.jpg" alt="" width="400px">
         <p>About the Breeder
             BREEDING SINCE 2020
             Juniper and Hector Colon are from California and breed German Shepherd Dogs.
