--- a/breeding.html
+++ b/breeding.html
@@ -31,10 +31,10 @@
     </section>
     <section class="gsdiv">
         <div><img src="img/gsdad.JPEG" width="200px" height="200px" alt="The Parent"></div>
-        <div><img src="/img/gspuppy1.jpg" width="200px" height="200px" alt="German Shepherd Puppy"></div>
-        <div><img src="/img/gspuppys2.jpg" width="200px" height="200px" alt="German Shepherd Puppy"></div>
-        <div><img src="/img/gspuppy3.jpg" width="200px" height="200px" alt="German Shepherd Puppy"></div>
-        <div><img src="/img/gs2.jpg" width="200px" height="200px" alt="German Shepherd Puppy"></div>
+        <div><img src="img/gspuppy1.jpg" width="200px" height="200px" alt="German Shepherd Puppy"></div>
+        <div><img src="img/gspuppys2.jpg" width="200px" height="200px" alt="German Shepherd Puppy"></div>
+        <div><img src="img/gspuppy3.jpg" width="200px" height="200px" alt="German Shepherd Puppy"></div>
+        <div><img src="img/gs2.jpg" width="200px" height="200px" alt="German Shepherd Puppy"></div>
     </section>
     <section class="grdiv">
         <br>
@@ -44,12 +44,12 @@
         <div>
             <img src="img/goldparents3.jpg" width=200px height="200px" alt="The Parents ">
         </div>
-        <div><img src=" /img/goldlitter.JPG" width=200px height="200px" alt="Golden Labrador Puppies"> </div>
+        <div><img src="img/goldlitter.JPG" width=200px height="200px" alt="Golden Labrador Puppies"> </div>
         <div>
-            <img src=" /img/goldparents1.jpg" width="250px" height="200px" alt="The Parents">
+            <img src="img/goldparents1.jpg" width="250px" height="200px" alt="The Parents">
         </div>
         <div>
-            <img src="/img/goldpuppy3.jpg" width="250px" height="200px" alt="Golden Labrador Puppies">
+            <img src="img/goldpuppy3.jpg" width="250px" height="200px" alt="Golden Labrador Puppies">
         </div>
     </section>
 
