--- a/training.html
+++ b/training.html
@@ -31,7 +31,7 @@
     <section>
         <div>
             <h3>We use the Puppy Culture complete Program to raise and train our puppys</h3>
-            <img src="/img/gspuppy3.jpg" alt="">
+            <img src="img/gspuppy3.jpg" alt="">
             <p>Puppy Culture is a complete program of over 50 lessons - from whelping box to new home.
 
                 From early neurological stimulation, to aggression prevention, to potty training, manding, and leash
